export const snapshot = {};

snapshot[`when running a deployment, given CI only cloned 1 commit on current branch, expect to receive all parsed commits for branch 1`] = `
[
  {
    abbreviatedSha: "abc123",
    author: {
      email: "test@example.com",
      name: "Test Author",
    },
    committer: {
      email: "test@example.com",
      name: "Test Committer",
    },
    date: "2021-01-01T00:00:00.000Z",
    filesChanged: [],
    isMergeCommit: false,
    isRevertCommit: false,
    message: "latest remote commit on main branch",
    messageLines: [
      "latest remote commit on main branch",
    ],
    parents: [],
    sha: "abc123",
    title: "latest remote commit on main branch",
  },
  {
    abbreviatedSha: "abc123",
    author: {
      email: "test@example.com",
      name: "Test Author",
    },
    committer: {
      email: "test@example.com",
      name: "Test Committer",
    },
    date: "2021-01-01T00:00:00.000Z",
    filesChanged: [],
    isMergeCommit: false,
    isRevertCommit: false,
    message: "latest local commit on main branch",
    messageLines: [
      "latest local commit on main branch",
    ],
    parents: [],
    sha: "abc123",
    title: "latest local commit on main branch",
  },
]
`;

snapshot[`when makePullRequestComment is enabled and deployment succeeds, expect status updates posted to PR 1`] = `
[
  "## decaf
Running deployments in test mode. Results will appear below. 
If this pull request and all of it's parent pull requests are merged using the...",
  "...🟩 **merge** 🟩 merge method... 🚢 The next version of the project will be: **1.1.0**

<details>
  <summary>Learn more</summary>
  <br>
  Latest release: 1.0.0<br>
  Commit of latest release: old-commit-sha<br>
  <br>
  Commits since last release:<br>
  - Merge pull request #42 from feature

<br>- fix: bug fix<br>- feat: add new feature    
  </details>",
]
`;

snapshot[`when makePullRequestComment is enabled and no deployment triggered, expect appropriate PR message 1`] = `
[
  "## decaf
Running deployments in test mode. Results will appear below. 
If this pull request and all of it's parent pull requests are merged using the...",
  "...🟩 **merge** 🟩 merge method... 🌴 It will not trigger a deployment. No new version will be deployed.

<details>
  <summary>Learn more</summary>
  <br>
  Latest release: 1.0.0<br>
  Commit of latest release: abc123prev<br>
  <br>
  Commits since last release:<br>
  - chore: does not trigger release    
  </details>",
]
`;

snapshot[`when multiple simulated merge types configured with PR comments, expect separate status for each type 1`] = `
[
  "## decaf
Running deployments in test mode. Results will appear below. 
If this pull request and all of it's parent pull requests are merged using the...",
  "...🟩 **merge** 🟩 merge method... 🚢 The next version of the project will be: **1.1.0**

<details>
  <summary>Learn more</summary>
  <br>
  Latest release: 1.0.0<br>
  Commit of latest release: def456prev<br>
  <br>
  Commits since last release:<br>
  - feat: add feature    
  </details>",
  "...🟩 **rebase** 🟩 merge method... 🚢 The next version of the project will be: **1.1.0**

<details>
  <summary>Learn more</summary>
  <br>
  Latest release: 1.0.0<br>
  Commit of latest release: def456prev<br>
  <br>
  Commits since last release:<br>
  - feat: add feature    
  </details>",
  "...🟩 **squash** 🟩 merge method... 🚢 The next version of the project will be: **1.1.0**

<details>
  <summary>Learn more</summary>
  <br>
  Latest release: 1.0.0<br>
  Commit of latest release: def456prev<br>
  <br>
  Commits since last release:<br>
  - feat: add feature    
  </details>",
]
`;

snapshot[`when this is the first release with PR comments enabled, expect 'Learn more' shows appropriate text 1`] = `
[
  "## decaf
Running deployments in test mode. Results will appear below. 
If this pull request and all of it's parent pull requests are merged using the...",
  "...🟩 **merge** 🟩 merge method... 🚢 The next version of the project will be: **1.0.0**

<details>
  <summary>Learn more</summary>
  <br>
  Latest release: none, this is the first release.<br>
  Commit of latest release: none, this is the first release.<br>
  <br>
  Commits since last release:<br>
  - feat: initial release    
  </details>",
]
`;

snapshot[`when deployment fails with makePullRequestComment enabled and buildUrl provided, expect error comment with link 1`] = `
[
  "## decaf
Running deployments in test mode. Results will appear below. 
If this pull request and all of it's parent pull requests are merged using the...",
  "...🟩 **merge** 🟩 merge method... ⚠️ There was an error during deployment run. [See logs to learn more and fix the issue](https://github.com/owner/repo/actions/runs/123456).",
]
`;

snapshot[`when deployment fails with makePullRequestComment enabled and no buildUrl, expect error comment without link 1`] = `
[
  "## decaf
Running deployments in test mode. Results will appear below. 
If this pull request and all of it's parent pull requests are merged using the...",
  "...🟩 **merge** 🟩 merge method... ⚠️ There was an error during deployment run. See CI server logs to learn more and fix the issue.",
]
`;
